# generic-programming-munihac-2018

./: generic-programming-munihac.cabal  stack.yaml
src/: Demo.hs
