name: generic-programming-munihac
version: 2018
author: Andres Löh <andres@well-typed.com>
build-type: Simple
cabal-version: >= 2.0

library
  hs-source-dirs: src
  default-language: Haskell2010
  exposed-modules:
    Demo
  build-depends:
    base,
    sop-core >= 0.4 && < 0.5,
    generics-sop >= 0.4.0.1 && < 0.5
